<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/agregar_recorrido_fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoRecorridoActivity">

    <Chronometer
        android:id="@+id/nuevoCronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorTextoFondoOscuro"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nuevoDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/AgregarRecorrido_cero_km"
        android:textColor="@color/colorTextoFondoOscuro"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuevoCronometro" />

    <TextView
        android:id="@+id/nuevoCantidadPuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/AgregarRecorrido_cero_puntos"
        android:textColor="@color/colorTextoFondoOscuro"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuevoDistancia" />

    <Button
        android:id="@+id/nuevoBotonIniciar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AgregarRecorrido_boton_iniciar_recorrido"
        app:layout_constraintBottom_toTopOf="@+id/nuevoBotonDescartar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nuevoBotonFinalizar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AgregarRecorrido_boton_finalizar_recorrido"
        app:layout_constraintBottom_toTopOf="@+id/nuevoBotonDescartar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/nuevoBotonDescartar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AgregarRecorrido_boton_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>